Version 1.1.12 (released ??-???-????)

  * fix path display in patch and certain diff views (issue #485)
  * fix broken cvsdb glob searching (issue 486)
  * allow svn revision specifiers to have leading r's (issue #441, #448) 
  * allow environmental override of configuration location (issue #494)
  * fix exception HTML-escaping non-string data under WSGI (issue #454)

Version 1.1.11 (released 17-May-2011)

  * security fix: remove user-reachable override of cvsdb row limit
  * fix broken standalone.py -c and -d options handling
  * add --help option to standalone.py
  * fix stack trace when asked to checkout a directory (issue #478)
  * improve memory usage and speed of revision log markup (issue #477)
  * fix broken annotation view in CVS keyword-bearing files (issue #479)
  * warn users when query results are incomplete (issue #433)
  * avoid parsing errors on RCS newphrases in the admin section (issue #483)
  * make rlog parsing code more robust in certain error cases (issue #444)

Version 1.1.10 (released 15-Mar-2011)

  * fix stack trace in Subversion revision info logic (issue #475, issue #476)

Version 1.1.9 (released 18-Feb-2011)

  * vcauth universal access determinations (issue #425)
  * rework svn revision info cache for performance
  * make revision log "extra pages" count configurable
  * fix Subversion 1.4.x revision log compatibility code regression
  * display sanitized error when authzfile is malformed
  * handle file:/// Subversion rootpaths as local roots (issue #446)
  * restore markup of URLs in file contents (issue #455)
  * optionally display last-committed metadata in roots view (issue #457)

Version 1.1.8 (released 02-Dec-2010)

  * fix slowness triggered by allow_compress=1 configuration (issue #467)
  * allow use of 'fcrypt' for Windows standalone.py authn support (issue #471)
  * yield more useful error on directory markup/annotate request (issue #472)

Version 1.1.7 (released 09-Sep-2010)
