@@ -2179,6 +2179,12 @@ td {
   <td>Log message of last modification to the root.</td>
 </tr>
 <tr class="varlevel2">
+  <td class="varname">roots.log_href</td>
+  <td>String</td>
+  <td>URL of log revision view for the top-most (root) directory of
+    the root (repository).</td>
+</tr>
+<tr class="varlevel2">
   <td class="varname">roots.name</td>
   <td>String</td>
   <td>Name of a configured repository.</td>
